--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,39 +7,14 @@ pipeline {
                 checkout([
                     $class: 'GitSCM', 
                     branches: [[name: '*/main']], 
-                    doGenerateSubmoduleConfigurations: false, 
                     extensions: [], 
-                    submoduleCfg: [], 
                     userRemoteConfigs: [[
-                        url: 'https://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@github.com/GeorgesGil/AlgoritmosParalelos.git'
+                        url: 'https://github.com/GeorgesGil/app-semana-05.git'
                     ]]
                 ])
           
             }
         }
-        stage('Plan') {
-            steps {
-                dir('../../go-app/terraform') {
-
-                    sh 'terraform plan'
-                }
-            }
-        }
-        stage('Apply') {
-            steps {
-                dir('../../go-app/terraform') {
-                    sh 'terraform apply -auto-approve'
-                }
-            }
-        }
-        stage('Destroy') {
-            steps {
         
-                dir('../../go-app/terraform') {
-           
-                    sh 'terraform destroy -auto-approve'
-                }
-            }
-        }
     }
 }
