--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,14 +4,12 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                checkout([
-                    $class: 'GitSCM', 
-                    branches: [[name: '*/main']], 
+                checkout scmGit(
+                    branches: [[name: '**']], 
                     extensions: [], 
                     userRemoteConfigs: [[
                         url: 'https://github.com/GeorgesGil/app-semana-05.git'
-                    ]]
-                ])
+                        ]])
           
             }
         }
