--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,19 +4,17 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                checkout scmGit(
-                    branches: [[name: '**']], 
+                checkout([
+                    $class: 'GitSCM', 
+                    branches: [[name: '*/main']], 
                     extensions: [], 
                     userRemoteConfigs: [[
                         url: 'https://github.com/GeorgesGil/app-semana-05.git'
-                        ]])
+                    ]]
+                ])
           
             }
         }
-       
-	   
-	   
-	   
-	   
+        
     }
 }
